# CRM_Asistant

./: .gitignore  CLAUDE.md  DECISIONS.md  PHASE4_PLAN.md  README.md  docker-compose.yml  pitch.html
backend/: .env.example  alembic.ini  pyproject.toml  seed.py  seed_knowledge.py  seed_metrics.py  seed_prompts.py
backend/alembic/: env.py
backend/alembic/versions/: 3313605f6b2a_add_token_blacklist.py  4060e7fcda09_initial_schema.py  7a57a29178cc_add_users_and_organizations.py  7cf92d97cd85_make_role_department_nullable.py  a3f892bc1d47_add_rag_knowledge_base.py  a7e2c9f4b1d8_add_erasure_certificates.py  b0fd71897093_add_agent_lifecycle_and_notifications.py  b9fbcf6fb0c4_add_credentials_table.py  c64dcc61a16a_add_organization_id_to_all_models.py  d5e8f1c4a9b2_add_credential_access_log.py  e1f9d8c3b7a4_add_audit_log.py  e4b9d1f2c8a3_add_retention_policies.py  e8d4a2b1f3c5_add_user_department_and_mcp_scopes.py  f6c9a1d4e5b2_add_approvals_and_autonomy.py  fa1356ecb1a6_add_prompt_versions_and_templates.py
backend/app/: config.py  main.py
backend/app/activities/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/agents/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/approvals/: admin_router.py  models.py  router.py  schemas.py  service.py
backend/app/audit/: models.py  router.py  schemas.py  service.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/compliance/: __init__.py  admin_router.py  classification.py  models.py  repository.py  retention.py  schemas.py  service.py
backend/scripts/: README.md  backup.sh  restore.sh  sync_dev_enum_labels.py
backend/tests/: conftest.py  test_approvals.py  test_audit_log.py  test_auth.py  test_compliance.py  test_mcp_router.py  test_mcp_scopes.py  test_ops.py  test_retention.py  test_smoke.py  test_tasks.py  test_tenant_isolation.py  test_vault.py
(+168 files in other folders)
