[project]
name = "crm-agents"
version = "0.1.0"
description = "CRM for AI Agents - Manage AI agents like a team"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # [email] pulls email-validator, required by EmailStr in the auth schemas.
    # Was only present transitively before — a clean CI install was missing it.
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    # Declared explicitly because app code imports them directly (P0.8 — they
    # were only present transitively before, which would break a clean CI install).
    "anthropic>=0.69.0",
    "cryptography>=42.0.0",
    # Optional error tracking — inert unless SENTRY_DSN is set (see app/core/logging.py).
    "sentry-sdk[fastapi]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.per-file-ignores]
# agent_executor imports app.workers.tools (and tool_definitions/registry) AFTER its
# exception classes on purpose — those modules import these exceptions, so importing
# them at the top would create a circular import. E402 is the expected trade-off.
"app/workers/agent_executor.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
